--- a/deberS6/css/styles.css
+++ b/deberS6/css/styles.css
@@ -36,40 +36,6 @@
     --turquoise: #72efddff;
     --aquamarine: #80ffdbff;
 
-    /* SCSS HSL */
-    --purple: hsla(278, 100%, 36%, 1);
-    --french-violet: hsla(263, 60%, 48%, 1);
-    --slate-blue: hsla(239, 53%, 59%, 1);
-    --tufts-blue: hsla(213, 64%, 59%, 1);
-    --blue-jeans: hsla(203, 69%, 59%, 1);
-    --vivid-sky-blue: hsla(194, 73%, 59%, 1);
-    --sky-blue-crayola: hsla(188, 70%, 61%, 1);
-    --medium-turquoise: hsla(180, 66%, 63%, 1);
-    --turquoise: hsla(171, 80%, 69%, 1);
-    --aquamarine: hsla(163, 100%, 75%, 1);
-
-    /* SCSS RGB */
-    --purple: rgba(116, 0, 184, 1);
-    --french-violet: rgba(105, 48, 195, 1);
-    --slate-blue: rgba(94, 96, 206, 1);
-    --tufts-blue: rgba(83, 144, 217, 1);
-    --blue-jeans: rgba(78, 168, 222, 1);
-    --vivid-sky-blue: rgba(72, 191, 227, 1);
-    --sky-blue-crayola: rgba(86, 207, 225, 1);
-    --medium-turquoise: rgba(100, 223, 223, 1);
-    --turquoise: rgba(114, 239, 221, 1);
-    --aquamarine: rgba(128, 255, 219, 1);
-
-    /* SCSS Gradient */
-    --gradient-top: linear-gradient(0deg, #7400b8ff, #6930c3ff, #5e60ceff, #5390d9ff, #4ea8deff, #48bfe3ff, #56cfe1ff, #64dfdfff, #72efddff, #80ffdbff);
-    --gradient-right: linear-gradient(90deg, #7400b8ff, #6930c3ff, #5e60ceff, #5390d9ff, #4ea8deff, #48bfe3ff, #56cfe1ff, #64dfdfff, #72efddff, #80ffdbff);
-    --gradient-bottom: linear-gradient(180deg, #7400b8ff, #6930c3ff, #5e60ceff, #5390d9ff, #4ea8deff, #48bfe3ff, #56cfe1ff, #64dfdfff, #72efddff, #80ffdbff);
-    --gradient-left: linear-gradient(270deg, #7400b8ff, #6930c3ff, #5e60ceff, #5390d9ff, #4ea8deff, #48bfe3ff, #56cfe1ff, #64dfdfff, #72efddff, #80ffdbff);
-    --gradient-top-right: linear-gradient(45deg, #7400b8ff, #6930c3ff, #5e60ceff, #5390d9ff, #4ea8deff, #48bfe3ff, #56cfe1ff, #64dfdfff, #72efddff, #80ffdbff);
-    --gradient-bottom-right: linear-gradient(135deg, #7400b8ff, #6930c3ff, #5e60ceff, #5390d9ff, #4ea8deff, #48bfe3ff, #56cfe1ff, #64dfdfff, #72efddff, #80ffdbff);
-    --gradient-top-left: linear-gradient(225deg, #7400b8ff, #6930c3ff, #5e60ceff, #5390d9ff, #4ea8deff, #48bfe3ff, #56cfe1ff, #64dfdfff, #72efddff, #80ffdbff);
-    --gradient-bottom-left: linear-gradient(315deg, #7400b8ff, #6930c3ff, #5e60ceff, #5390d9ff, #4ea8deff, #48bfe3ff, #56cfe1ff, #64dfdfff, #72efddff, #80ffdbff);
-    --gradient-radial: radial-gradient(#7400b8ff, #6930c3ff, #5e60ceff, #5390d9ff, #4ea8deff, #48bfe3ff, #56cfe1ff, #64dfdfff, #72efddff, #80ffdbff);
 }
 
 
@@ -567,6 +533,7 @@ div h1:nth-child(2){
     color: #fff;
     font-weight: bold;
     display:flex;
+    flex-wrap: wrap;
     justify-content:center;
     font-size:20px;
 
@@ -610,9 +577,26 @@ textarea{
 
 
 /*----------query--------------*/
-@media screen and (max-width:375px){
+@media (max-width:750px) {
     .containerDeFormulario{
         display:flex;
         flex-direction: column;
+        flex-wrap: wrap;
+        width:auto;
+        height:auto;
+        justify-content: center;
+    }
+    .containerMain{
+        display:block;
+    }
+    .tituloTextoMain h1{
+        position: relative;
+    }
+    .containerMain div{
+        font-size: 16px;
+        margin: auto auto;
+    }
+    .ImagenPerfil2{
+        transform: scale(0.6);
     }
 }
