--- a/deberS6/css/styles.css
+++ b/deberS6/css/styles.css
@@ -545,7 +545,7 @@ div h1:nth-child(2){
     margin-right: 60px;
 }
 
-section input{
+form input ,.boton{
     background-color: rgb(255, 255, 255);
     border-radius: 4px;
     width: 220px;
