--- a/deberS6/css/styles.css
+++ b/deberS6/css/styles.css
@@ -47,6 +47,9 @@
 }
 
 /*---------HEADER---------------*/
+#hamburguesa , .checkbox {
+    display:none
+}
 
 .botonLateral{
     display: none
@@ -75,6 +78,7 @@
 .efecto {
     margin-top: 30px;
 }
+
 .containerHeaderH2{   
     font-size: 20px;
     height:55px;
@@ -227,7 +231,7 @@ div h1:nth-child(2){
 .botonMain:hover {
     font-size: 16px;
 }
-.botonMain a{
+.botonMain p{
     text-decoration: none;
     color: white;
 }
@@ -784,18 +788,30 @@ textarea{
     }
 
     .checkbox{
-        position: relative;
-        opacity: 1
+        position: absolute;
+        opacity: 1;
+        display:block;
+        transform: scale(1.5);
+        margin-top: 12px;
+        margin-left: 275px;
+        z-index: 2;
+        opacity: 0;
     }
 
-    .checkbox:checked #menuOpciones{
-        height:100vh;
-    }
+    
     
     #hamburguesa{
+        transform: scale(1.2);
+        display:block;
         color:#fff;
         position: absolute;
+        margin-top: 12px;
+        margin-left: 275px;
     }
+
+   
+
+
     .botonLateral {
         position: relative;
         display: flex;
@@ -812,24 +828,20 @@ textarea{
 
 
     .containerHeaderH2 {
-        
         font-size: 20px;
         height: 0vh;
         width: 100vw;
         margin-top: 40px;
         position:fixed;
-        background-color: rgba(94, 96, 206, 0.623);
-        display: flex;
+        background-color: rgba(94, 96, 206, 0.897);
+        display: none;
         flex-wrap: wrap;
-        transition: all 0.7s
-    
-
+        transition: 1s
     } 
 
     .containerHeaderH2 a {
         width:100vw;
         height:100px;
-        display:none;
         font-size: 35px;
         text-align: center;
         list-style: none;
@@ -839,6 +851,16 @@ textarea{
         border: none;
         color:rgb(227, 72, 124)
     }
+
+   
+
+
+    .checkbox:checked ~ .containerHeaderH2{
+        display:flex;
+        height:100vh;
+        width: 100vw;
+    }
+
 }
 
 
